dataengine.cpp
@@ -331,10 +331,11 @@ void DataEngine::removeAllSources()
     while (it.hasNext()) {
         it.next();
         Plasma::DataContainer *s = it.value();
+        const QString &source = it.key();
+        it.remove();
         s->disconnect(this);
         s->deleteLater();
-        emit sourceRemoved(it.key());
-        it.remove();
+        emit sourceRemoved(source);
     }
 }
 
